# widget-market

./: Cargo.toml  README.md  TODO.md  args.rs  build.rs  cli.rs  client.rs  main.rs  server.rs  widget.capnp
examples/: foo_market.rs  foo_trader.rs
schema/: widget.capnp
src/: client.rs  lib.rs  main.rs  market.rs  server.rs  single_market.rs
