[package]
name = "widget-market"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
capnp = "~0.14"
capnp-rpc = "~0.14"
env_logger = "0.9.0"
futures = "0.3.0"
log = "0.4"
rand = "0.8.4"
serde = {version = "~1.0.0", features = ["derive"]}
serde_json = "~1.0.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.6.0", features = ["compat"] }

[build-dependencies]
capnpc = "~0.14"

[[bin]]
name = "main"
path = "main.rs"
